Fixed image alignment stuff

--- a/src/containers/chat/account_screen/index.css
+++ b/src/containers/chat/account_screen/index.css
@@ -10,6 +10,7 @@
     padding: 20px;
     max-width: 60%;
     display: block;
+    box-shadow: 5px 5px 2px #D3D3D3;
 }
 .received-message-box{
     height: auto;
@@ -64,4 +65,5 @@ img#sentImg{
     margin-left: auto;
     border-radius: 24px;
     border: 10px solid #007D80;
+    box-shadow: 5px 5px 2px #D3D3D3;
 }
